fixing dark mode

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,3 +15,13 @@ body {
   background-color: #ffff;
   user-select: none;
 }
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+  body {
+    background-color: #ffff;
+    color: black;
+  }
+}
